[package]
name = "cimg-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
wry = "0.55"
tao = "0.35"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
cookie_lib = { package = "cookie", version = "0.18" }
uuid = { version = "1", features = ["v4"] }
ureq = { version = "2", features = ["json"] }
